# summer-code-jam-2020

adventurous-anteaters/: .flake8  LICENSE  Makefile  home.html  index.html  profile.html  pyproject.toml  script.js  style.css  title.html  view_tweet.html
adventurous-anteaters/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
adventurous-anteaters/adv_ant/retroNet/migrations/: 0001_initial.py  0002_auto_20200809_0935.py
adventurous-anteaters/adv_ant/retroNet/static/retroNet/: style.css
adventurous-anteaters/adv_ant/retroNet/templates/: view_tweet.html
adventurous-anteaters/src/: manage.py
adventurous-anteaters/src/common/: models.py  serializers.py  views.py
adventurous-anteaters/src/common/migrations/: 0001_initial.py
adventurous-anteaters/src/retro_net/: asgi.py  settings.py  urls.py  wsgi.py
