[tool.poetry]
name = "retro_net"
version = "1.0.0"
description = ""
authors = ["adventurous-anteaters team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
djangorestframework = "^3.11.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
